US046 Setting_Vervollstaendingen
# Replace TextView in Settings-Copyright,-feeback,-support
with WebViews
# Add some Context

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="requestPermission_lastTryRequest">Letzer Versuch! Bitte gestatte den Zugriff um Scannen zu können.</string>
     <string name="requestPermission_userDontLike">Okay du magst nicht? Vielleicht ein anderes mal :)</string>
     <string name="abort">ABBRUCH</string>
+    <string name="setting_copyright_privacyPolicy">Privacy Policy</string>
 
 
 </resources>
