--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="shortTitle_peek">Der Kurztitel darf nicht das Zeichen | enthalten.</string>
     <string name="description_peek">Die Beschreibung darf nicht das Zeichen | enthalten.</string>
     <string name="room_peek">Das Feld Raum darf nicht das Zeichen | enthalten.</string>
-    <string name="username_peek">Der benutzername darf nicht das Symbol | enthalten.</string>
+    <string name="username_peek">Der Benutzername darf nicht das Symbol | enthalten.</string>
 
     <string name="pushEnabled">Die Push-Nachrichten wurden eingeschaltet.</string>
     <string name="pushDisabled">Die Push-Nachrichten wurden ausgeschaltet.</string>
@@ -64,11 +64,11 @@
     </string-array>
     <string name="thanksphoneNumber">Danke für den Zugriff auf deine Telefonnummer</string>
     <string name="phoneNumber_explanation">Wir brauchen deine Telefonnummer, um Rückmeldungen versenden können</string>
-    <string name="lastTry_phoneNumber">Ohne deine Telefonnummer können wir deinen Nutzernamen nicht speichern.</string>
+    <string name="lastTry_phoneNumber">Ohne deine Telefonnummer kannnst du keine Rückmeldungen versenden und empfangen.</string>
     <string name="oneMoreTime">Nochmal</string>
     <string name="telephonenumerNotRead">Die Telefonnummer konnte nicht ausgelesen werden. Bitte geben Sie Ihre Telefonnummer manuell ein.</string>
-    <string name="wrongNumberFormat">Die Telefonummer muss aus mindestens einer Zahl und ggf. einem + am Anfang bestehen.</string>
-    <string name="UsernameNotSaved">Der Benutzername wurde nicht gespeichert.</string>
+    <string name="wrongNumberFormat">Diese Telefonnummer ist nicht zulässig.</string>
+    <string name="PhoneNumberNotSaved">Die Telefonnummer wurde nicht gespeichert. Du kannst sie in den Einstellungen festlegen.</string>
 
     <string-array name="push_times">
         <item name="push_time_0">0</item>
