--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,7 @@
     <string name="scannerOverlay_toShowTheEvent">scanne ihn ab, um den Termin zu öffnen</string>
     <string name="requestPermission_thankYou">Danke für die Zugriffsrechte auf die Kamera!</string>
     <string name="requestPermission_askForPermission">Wir brauchen den Kamerazugriff um den QR-Code einzuscannen.</string>
+    <string name="requestPermission_askForPermission_sendSMS">Wir müssen SMS verschicken, um den Ersteller zu benachrichtigen.</string>
     <string name="requestPermission_againButton">Nochmal</string>
     <string name="requestPermission_lastTryRequest">Letzer Versuch!</string>
     <string name="abort">ABBRUCH</string>
@@ -138,10 +139,15 @@
     <string name="requestPermission_accessDenied_withCheckbox">Du hast mit den Hacken bei \"Nicht mehr fragen\"
         dauerhaft den Zugiff zum Kalender verweigert. Um den QR Scanner zu nutzen aktiviere bitte den
         Kamerazugriff über deine Rechteverwaltung</string>
+    <string name="requestPermission_accessDenied_withCheckbox_SendSMS">Du hast mit den Hacken bei \"Nicht mehr fragen\"
+        dauerhaft den Zugiff zum Kalender verweigert. Um den QR Scanner zu nutzen aktiviere bitte das SMS Senden über deine Rechteverwaltung</string>
     <string name="requestPermission_firstTryRequest">Erster von zwei Versuchen</string>
     <string name="qrGenerator_button_showInEventOverView">In Terminübersicht anzeigen</string>
 
 
     <string name="accept">Ja!</string>
     <string name="reject">Nein!</string>
+    <string name="sms_sent">SMS wurde erfolgreich versandt!</string>
+    <string name="sms_fail">SMS senden fehlgeschlagen!</string>
+    <string name="cannot_send_sms">Bitte in den Einstellungen ändern</string>
 </resources>
