US013: Send SMS in extra class to make it reusable :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,4 +150,5 @@
     <string name="sms_sent">SMS wurde erfolgreich versandt!</string>
     <string name="sms_fail">SMS senden fehlgeschlagen! Es wird später automatisch erneut versucht!</string>
     <string name="cannot_send_sms">Bitte in den Einstellungen ändern</string>
+    <string name="sms_exception">SMS fehlgeschlagen!</string>
 </resources>
