--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="calendarTabText">Tab_2</string>
     <string name="settingTabText">Tab_3</string>
     <string name="action_settings">Settings</string>
-    <string name="event_repetition">Wiederholungshäufigkeit</string>
+    <string name="event_repetition">Wiederholung</string>
     <string name="setting">Setting</string>
     <string name="newEvent">Termin anlegen</string>
     <string name="calendar">calendar</string>
@@ -22,7 +22,7 @@
     <string name="minutesBefore_text">Minuten vorher</string>
     <string name="noValidUsername">Benutzername darf nicht mit Leerzeichen anfangen.</string>
     <string name="event_Description">Beschreibung :</string>
-    <string name="noValidUsername_peek">Der Benutzername darf nicht das Zeichen | enthalten.</string>
+    <string name="noValidUsername_peek">Der Benutzername darf dieses Zeichen | nicht enthalten.</string>
     <string name="event_date">Datum:</string>
     <string name="event_startTime">Startzeit :</string>
     <string name="event_endtime">Endzeit :</string>
@@ -38,11 +38,11 @@
     <string name="savingSuccessful_new">neuen Termin erstellen</string>
     <string name="savingSuccessful_qrcode">QRCode anzeigen</string>
     <string name="titleDialogUsername">Bitte vergib einen Benutzernamen! </string>
-    <string name="titleDialogUsernamePhoneNumber">Bitte vergib einen Benutzernamen und deine Telefonnummer! </string>
+    <string name="titleDialogUsernamePhoneNumber">Bitte gib einen Benutzernamen und deine Telefonnummer ein! </string>
     <string name="save_text">speichern</string>
     <string name="later_text">Später</string>
     <string name="thanksForUsername">Benutzername wurde gespeichert. </string>
-    <string name="titleDialogFinalDecission">Sind Sie sich sicher?</string>
+    <string name="titleDialogFinalDecission">Bist du sicher?</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <!-- TODO: Remove or change this placeholder text -->
@@ -56,17 +56,17 @@
     <string name="description_spaces">Die Beschreibung darf nicht mit Leerzeichen beginnen.</string>
     <string name="place_spaces">Der Raum darf nicht mit Leerzeichen beginnen.</string>
     <string name="room_too_long">Der Raum darf nicht länger als 100 Zeichen sein.</string>
-    <string name="shortTitle_peek">Der Kurztitel darf nicht das Zeichen | enthalten.</string>
-    <string name="description_peek">Die Beschreibung darf nicht das Zeichen | enthalten.</string>
-    <string name="room_peek">Das Feld Raum darf nicht das Zeichen | enthalten.</string>
-    <string name="pushEnabled">Die Erinnerungen wurden eingeschaltet.</string>
-    <string name="pushDisabled">Die Erinnerungen wurden ausgeschaltet.</string>
-    <string formatted="true" name="pushMinutesSet">Die Push-Nachrichten erscheinen nun %1$d Minuten vor Ihrem Termin.</string>
+    <string name="shortTitle_peek">Der Kurztitel darf dieses Zeichen | nicht enthalten.</string>
+    <string name="description_peek">Die Beschreibung darf dieses Zeichen | nicht enthalten.</string>
+    <string name="room_peek">Das Feld "Raum" darf dieses Zeichen | nicht enthalten.</string>
+    <string name="pushEnabled">Die Erinnerungen wurden eingeschalten.</string>
+    <string name="pushDisabled">Die Erinnerungen wurden ausgeschalten.</string>
+    <string formatted="true" name="pushMinutesSet">Die Push-Nachrichten erscheinen nun %1$d Minuten vor deinem Termin.</string>
     <string name="startTab">Start-Tab :</string>
     <string name="startTabChanged" formatted="true">Beim nächsten Start zeigt Horario nun den Tab %1$s.</string>
-    <string name="acceptEventAfterScan">Wollen Sie wirklich zusagen?</string>
-    <string name="rejectEventAfterScan">Wollen Sie wirklich ablehnen?</string>
-    <string name="saveEventAfterScan">Wollen Sie wirklich speichern ohen zusagen?</string>
+    <string name="acceptEventAfterScan">Willst du wirklich zusagen?</string>
+    <string name="rejectEventAfterScan">Willst du wirklich ablehnen?</string>
+    <string name="saveEventAfterScan">Willst du wirklich speichern ohne zusagen?</string>
     <string name="eventIsInDatabase">Termin ist schon in der Datenbank vorhanden!</string>
 
 
@@ -119,7 +119,7 @@
     <string name="toCalender">\u0020Zum Kalender\u0020</string>
     <string name="wrongQRCodeResult">Das ist der Inhalt vom QR Code:\u0020</string>
     <string name="notAsEventSaveable">Das können wir leider nicht als Termin speichern!</string>
-    <string name="back_where_user_comesFrom">Zurück zur Ursprung</string>
+    <string name="back_where_user_comesFrom">Zurück zum Ursprung</string>
 
     <!-- QR Scanner & Scanner PopUp -->
     <string name="eventSave">Termin zusagen</string>
