US049: fixed bug from Mario fixed bug in saving events and recognition of duplicate events fixed bug in showing of serial events

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,5 @@
     <string name="requestPermission_userDontLike">TEST</string>
     <string name="phoneNumber">Telefonnummer :</string>
     <string name="phoneNumberHint">Telefonnummer</string>
+    <string name="thanksUserData">Die Eingaben wurden gespeichert.</string>
 </resources>
