--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,10 +63,12 @@
     <string name="reject_event">Das Event wurde aus der Datenbank gelöscht</string>
     <string name="thanksForUsernameAndPhoneNumber">Benutzername und Telefonnummer wurde gespeichert. </string>
     <string name="description_too_long">Die Beschreibung darf nicht länger als 500 Zeichen sein.</string>
-    <string name="reject_event_hint">Der Termin wurde abgesagt und aus der Datenbank entfernt</string>
+    <string name="reject_event_hint">Der Termin wurde abgesagt.</string>
     <string name="reject_event_reason_free_text_field_empty">Die Beschreibung darf nicht mit einem Leerzeichen anfangen.</string>
     <string name="reject_event_reason_free_text_field_to_long">Die Beschreibung darf nicht mehr als 60 Zeichen sein.</string>
-    <string name="reject_event_reason_free_text_field">Die Beschreibung darf kein "|" enthalten</string>
+    <string name="reject_event_reason_contains_pipe">Die Beschreibung darf kein "|" enthalten</string>
+    <string name="reject_event_reason_contains_comma">Die Beschreibung darf kein "," enthalten</string>
+    <string name="reject_event_reason_contains_exclamation_mark">Die Beschreibung darf kein "!" enthalten</string>
     <string name="reject_event_reason">Bitte wähle einen Grund aus oder gebe ihn ein.</string>
     <string name="shortTitle_too_long">Der Kurztitel darf nicht länger als 50 Zeichen sein.</string>
     <string name="startTime_past">Der Termin darf nicht in der Vergangenheit beginnen.</string>
