--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="thanksForUsernameAndPhoneNumber">Benutzername und Telefonnummer wurde gespeichert. </string>
     <string name="description_too_long">Die Beschreibung darf nicht länger als 500 Zeichen sein.</string>
-    <string name="reject_event_hint">Der Termin wurde abgesagt und eine SMS versendet.</string>
+    <string name="reject_event_hint">Der Termin wurde abgesagt.</string>
     <string name="reject_event_reason_free_text_field_empty">Die Beschreibung darf nicht mit einem Leerzeichen anfangen.</string>
     <string name="reject_event_reason_free_text_field_to_long">Die Beschreibung darf nicht mehr als 60 Zeichen sein.</string>
     <string name="reject_event_reason_contains_pipe">Die Beschreibung darf kein "|" enthalten</string>
@@ -108,7 +108,6 @@
         <item name="push_time_120">120</item>
     </string-array>
     <string-array name="reason_for_rejection">
-        <item name="reason_0"></item>
         <item name="reason_1">Krank</item>
         <item name="reason_2">Zeitlich verhindert</item>
         <item name="reason_3">Schlafen</item>
@@ -182,6 +181,7 @@
 
     <string name="accept">Ja!</string>
     <string name="reject">Nein!</string>
+    <string name="reject_event">Termin absagen</string>
     <string name="sms_sent">SMS wurde erfolgreich versandt!</string>
     <string name="sms_fail">SMS Senden fehlgeschlagen! Es wird später automatisch erneut versucht!</string>
     <string name="cannot_send_sms">Bitte in den Einstellungen ändern</string>
